Added h2 to the title in React component and updated HTML title tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/location.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DFW Immersive Adventures: Explore Art, Culture, and Creativity</title>
+    <title>DFW Immersive Adventures</title>
   </head>
   <body>
     <div id="root"></div>
